# discord-altmng

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json
AppIcon.appiconset/: Contents.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
