[package]
name = "alt-mngr"
version = "0.1.0"
description = "Discord account manager — switch between alts without logging out"
authors = ["filip"]
edition = "2021"
license = "MIT"

[lib]
name = "alt_mngr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty-leveldb = "3"

